# Scriber

./: CMakeLists.txt  README.md  TODO.md  editorwidget.cpp  editorwidget.h  filemanager.h  install.sh  main.cpp  mainwindow.cpp  mainwindow.h  markdownhighlighter.cpp  markdownhighlighter.h  resources.qrc  spellchecker.cpp  test_arg.cpp  test_arg_full.cpp  test_missing_arg.cpp
include/: documentoutlinewidget.h  editorwidget.h  filemanager.h  findbarwidget.h  mainwindow.h  markdownhighlighter.h  outlinedelegate.h  sidebarfileexplorer.h  spellchecker.h  themedialog.h  thememanager.h  toastnotification.h
resources/themes/: dark.css  dark.json  light.css  light.json  pitchblack.css  pitchblack.json
src/: documentoutlinewidget.cpp  editorwidget.cpp  filemanager.cpp  findbarwidget.cpp  main.cpp  mainwindow.cpp  markdownhighlighter.cpp  outlinedelegate.cpp  sidebarfileexplorer.cpp  test_qrc_resources.cpp  test_resource.cpp  themedialog.cpp  thememanager.cpp  toastnotification.cpp
